gccida/g3/ix86_expand_move
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7235:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  ix86_expand_move( machine_mode mode, rtx *operands) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7238:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note v3; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7250:4: error: expected ';' after expression
rtx v17; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7250:5: error: use of undeclared identifier 'v17'
rtx v17; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7258:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7258:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7332:14: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFB) == 2 || *( ( _DWORD *)&mode_class_0 + ( int)mode) == 8) 
             ^~~~~~~~~~~~
             mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7332:41: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFB) == 2 || *( ( _DWORD *)&mode_class_0 + ( int)mode) == 8) 
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7332:78: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFB) == 2 || *( ( _DWORD *)&mode_class_0 + ( int)mode) == 8) 
                                                                             ^~~~~~~~~~~~
                                                                             mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7352:1: error: use of undeclared identifier 'v17'
v17 = operands[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7353:18: error: use of undeclared identifier 'v17'
v18 = *( _WORD *)v17; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7354:17: error: use of undeclared identifier 'v17'
if ( *( _WORD *)v17 != 58 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7356:24: error: use of undeclared identifier 'v17'
v22.rtwint = ( __int64)v17->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7386:20: error: use of undeclared identifier 'machine_mode'
v30 = force_reg( ( machine_mode)v6, v17); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7386:37: error: use of undeclared identifier 'v17'
v30 = force_reg( ( machine_mode)v6, v17); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7394:22: error: use of undeclared identifier 'machine_mode'
v25 = gen_reg_rtx( ( machine_mode)v6); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7394:1: error: use of undeclared identifier 'v25'
v25 = gen_reg_rtx( ( machine_mode)v6); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7395:1: error: use of undeclared identifier 'v17'
v17 = operands[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/i386.c:7396:7: error: use of undeclared identifier 'v25'
v19 = v25; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_move/src/obj/i386.o] Error 1
